# cargo-merge-assist

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
src/: main.rs  merge.rs
