[package]
name = "cargo-merge-assist"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Semantic merge assistant for Cargo.toml/Cargo.lock with verification workflow"
repository = "https://github.com/gyuro/cargo-merge-assist"
readme = "README.md"
keywords = ["cargo", "merge", "git", "rust"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
toml = "0.8"
